image and font size adjustments

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <div class="item one">
       <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5 fw-light text-body-emphasis">A history of everything you copy</h1>
+        <h1 class="display-5  text-body-emphasis">A history of everything you copy</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Clipboard allows you to track and organize everything you 
             copy. Instantly access your clipboard on all your devices.
@@ -51,15 +51,15 @@
       <div class="paragraphs-three">
       <h2>Quick Search</h2>
       <p>
-        Easily search your snippets by content, category, web address, application, and more.
+        Easily search your snippets by content,<br /> category, web address, application, and more.
       </p>
       <h2>iCloud Sync</h2>
       <p>
-        Instantly saves and syncs snippets across all your devices.
+        Instantly saves and syncs snippets across all<br /> your devices.
       </p>
       <h2>Complete History</h2>
       <p>
-        Retrieve any snippets from the first moment you started using the app.
+        Retrieve any snippets from the first moment<br /> you started using the app.
       </p>
       </div>
     </div>
@@ -69,7 +69,9 @@
         Whether you’re on the go, or at your computer, you can access all your Clipboard 
         snippets in a few simple clicks.
       </p>
-      <img src="./images/image-devices.png">
+      <div class="devices-image">
+        <img src="./images/image-devices.png">
+      </div>
     </div>
   </div>
 </body>
