--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             copy. Instantly access your clipboard on all your devices.
           </p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Download for iOS</button>
-            <button type="button" class="btn btn-outline-secondary btn-lg px-4">Download for Mac</button>
+            <button type="button" class="btn-ios btn btn-primary btn-lg px-4 gap-3">Download for iOS</button>
+            <button type="button" class="btn-mac btn btn-outline-secondary btn-lg px-4">Download for Mac</button>
           </div>
         </div>
       </div>
@@ -39,10 +39,10 @@
         <h2>
           Keep track of your snippets
         </h2>
-        <p>
+        <p class="mt-4">
           Clipboard instantly stores any item you copy in the cloud, 
-          meaning you can access your snippets immediately on all your 
-          devices. Our Mac and iOS apps will help you organize everything.
+          meaning you can access<br /> your snippets immediately on all your 
+          devices. Our Mac and iOS apps will help you<br /> organize everything.
         </p>
       </div>
     </div>
