spacing,sizing adjustments

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
   </style>
 </head>
 <body>
+<div class="main-container">
   <div class="container">
     <header>
       <img class="d-block mx-auto mt-4" src="./images/logo.svg" alt="" width="72" height="57">
     </header>
     <div class="item one">
       <div class="px-4 py-5 my-5 text-center">
-        <h1 class="display-5  text-body-emphasis">A history of everything you copy</h1>
+        <h1>A history of everything you copy</h1>
         <div class="col-lg-6 mx-auto">
           <p class="lead mb-4">Clipboard allows you to track and organize everything you 
             copy. Instantly access your clipboard on all your devices.
@@ -39,7 +40,7 @@
         <h2>
           Keep track of your snippets
         </h2>
-        <p class="mt-4">
+        <p>
           Clipboard instantly stores any item you copy in the cloud, 
           meaning you can access<br /> your snippets immediately on all your 
           devices. Our Mac and iOS apps will help you<br /> organize everything.
@@ -49,24 +50,24 @@
     <div class="item three">
       <img src="./images/image-computer.png">
       <div class="paragraphs-three">
-      <h2>Quick Search</h2>
-      <p>
+       <h2>Quick Search</h2>
+       <p>
         Easily search your snippets by content,<br /> category, web address, application, and more.
-      </p>
-      <h2>iCloud Sync</h2>
-      <p>
+       </p>
+       <h2>iCloud Sync</h2>
+       <p>
         Instantly saves and syncs snippets across all<br /> your devices.
-      </p>
-      <h2>Complete History</h2>
-      <p>
+       </p>
+       <h2>Complete History</h2>
+       <p>
         Retrieve any snippets from the first moment<br /> you started using the app.
-      </p>
+       </p>
       </div>
     </div>
     <div class="item four">
       <h2>Access Clipboard anywhere</h2>
       <p>
-        Whether you’re on the go, or at your computer, you can access all your Clipboard 
+        Whether you’re on the go, or at your computer, you can access all your Clipboard<br /> 
         snippets in a few simple clicks.
       </p>
       <div class="devices-image">
@@ -74,5 +75,6 @@
       </div>
     </div>
   </div>
+</div>
 </body>
 </html>
