--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </style>
 </head>
 <body>
-<div class="main-container">
   <div class="container">
     <header>
       <img class="d-block mx-auto mt-4" src="./images/logo.svg" alt="" width="72" height="57">
@@ -74,9 +73,8 @@
         <img src="./images/image-devices.png">
       </div>
     </div>
-  </div>
-  <div class="container-two">
-    <div class="cont-one">
+  
+    <div class="item five">
       <h2>Access Clipboard anywhere</h2>
       <p>
         Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
@@ -87,7 +85,7 @@
         We’ve got the tools to boost your productivity.
       </p>
     </div>
-    <div class="cont-two-features">
+    <div class="item six features">
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="feature col">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center  fs-2 mb-3">
@@ -112,7 +110,18 @@
         </div>
       </div>
     </div>
-  </div>
-</div>
+    <div class="item seven logos">
+      <img src="./images/logo-google.png">
+      <img src="./images/logo-ibm.png">
+      <img src="./images/logo-microsoft.png">
+      <img src="./images/logo-hp.png">
+      <img src="./images/logo-vector-graphics.png">
+    </div>
+    <div class="item six footer">
+      <footer>
+        
+      </footer>
+    </div>
+  </div>  
 </body>
 </html>
