sizing,positioning, font-weight and color changes

--- a/index.html
+++ b/index.html
@@ -75,11 +75,6 @@
     </div>
   
     <div class="item five">
-      <h2>Access Clipboard anywhere</h2>
-      <p>
-        Whether you’re on the go, or at your computer, you can access all your Clipboard snippets in a few simple clicks.
-      </p>
-      <img src="./images/image-devices.png">
       <h2>Supercharge your workflow</h2>
       <p>
         We’ve got the tools to boost your productivity.
@@ -88,29 +83,29 @@
     <div class="item six features">
       <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
         <div class="feature col">
-          <div class="feature-icon d-inline-flex align-items-center justify-content-center  fs-2 mb-3">
+          <div class="feature-icon   fs-2 mb-3">
             <img src="./images/icon-blacklist.svg">
           </div>
-          <h3 class="fs-2 text-body-emphasis">Create blacklists</h3>
+          <h3>Create blacklists</h3>
           <p>Ensure sensitive information never makes its way to your clipboard by excluding certain sources.</p>
         </div>
         <div class="feature col">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
             <img src="./images/icon-text.svg">
           </div>
-          <h3 class="fs-2 text-body-emphasis">Plain text snippets</h3>
+          <h3>Plain text snippets</h3>
           <p>Remove unwanted formatting from copied text for a consistent look.</p>
         </div>
         <div class="feature col">
           <div class="feature-icon d-inline-flex align-items-center justify-content-center fs-2 mb-3">
             <img src="./images/icon-preview.svg">
           </div>
-          <h3 class="fs-2 text-body-emphasis">Sneak preview</h3>
+          <h3>Sneak preview</h3>
           <p>Quick preview of all snippets on your Clipboard for easy access.</p>
         </div>
       </div>
     </div>
-    <div class="item seven logos">
+    <div class="item seven">
       <img src="./images/logo-google.png">
       <img src="./images/logo-ibm.png">
       <img src="./images/logo-microsoft.png">
