added new footer

--- a/index.html
+++ b/index.html
@@ -112,8 +112,37 @@
       <img src="./images/logo-hp.png">
       <img src="./images/logo-vector-graphics.png">
     </div>
-    <div class="item six footer">
-  
+    <div class="item eight">
+      <div class=" text-secondary px-4 py-5 text-center">
+        <div class="py-5">
+          <h2>Clipboard for iOS and Mac OS</h2>
+          <div class="col-lg-6 mx-auto">
+            <p class="mb-4">
+              Available for free on the App Store. Download for Mac or iOS, sync with iCloud and you’re ready to start adding to your clipboard.
+            </p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+              <button type="button" class="btn button-ios btn-lg px-4">Download for iOS</button>
+              <button type="button" class="btn button-mac btn-lg px-4">Download for Mac</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="item nine">
+      <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-4 d-flex align-items-center">
+          <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
+            <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
+          </a>
+          <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
+        </div>
+    
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
+          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
+          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
+        </ul>
+      </footer>
     </div>
   </div>  
 </body>
