desktop design complete

--- a/index.html
+++ b/index.html
@@ -134,14 +134,31 @@
           <a href="/" class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1">
             <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
           </a>
-          <span class="mb-3 mb-md-0 text-body-secondary">© 2024 Company, Inc</span>
+          <img src="./images/logo.svg">
+        </div>
+        <div>
+          <ul>
+            <li>FAQs</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li>Privacy Policy</li>
+            <li>Press Kit</li>
+          </ul>
+        </div>
+        <div>
+          <ul>
+            <li>Install Guide</li>
+          </ul>
         </div>
     
-        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-          <li class="ms-3"><a class="text-body-secondary" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-        </ul>
+        <div class="icons">
+          <img src="./images/icon-instagram.svg">
+          <img src="./images/icon-facebook.svg">
+          <img src="./images/icon-twitter.svg">
+        </div>
       </footer>
     </div>
   </div>  
